--- a/alexkuz.me/vercel.json
+++ b/alexkuz.me/vercel.json
@@ -31,7 +31,7 @@
 			"headers": [
 				{
 					"key": "Content-Encoding",
-					"value": "brotli"
+					"value": "br"
 				},
 				{
 					"key": "Content-Type",
