--- a/alexkuz.me/vercel.json
+++ b/alexkuz.me/vercel.json
@@ -1,7 +1,7 @@
 {
 	"headers": [
 		{
-			"source": "/files/binary.json.gz",
+			"source": "/files/application.json.gz",
 			"headers": [
 				{
 					"key": "Content-Encoding",
@@ -9,7 +9,7 @@
 				},
 				{
 					"key": "Content-Type",
-					"value": "binary/octet-stream"
+					"value": "application/octet-stream"
 				}
 			]
 		},
@@ -36,19 +36,6 @@
 				{
 					"key": "Content-Type",
 					"value": "application/octet-stream"
-				}
-			]
-		},
-		{
-			"source": "/files/json.json.gz",
-			"headers": [
-				{
-					"key": "Content-Encoding",
-					"value": "gzip"
-				},
-				{
-					"key": "Content-Type",
-					"value": "application/json"
 				}
 			]
 		}
